'Make single user' not registered in history #42289

Closed
opened 2014-10-18 18:56:59 +02:00 by Robert Forsman · 8 comments

System Information
Linux bubastis 3.10.25-gentoo #10 SMP Thu Jan 30 22:17:35 UTC 2014 x86_64 Intel(R) Core(TM) i7-4800MQ CPU @ 2.70GHz GenuineIntel GNU/Linux
01:00.0 VGA compatible controller: NVIDIA Corporation GK107GLM [Quadro K1100M] (rev a1) (prog-if 00 [VGA controller])

Blender Version
Broken: blender-2.72a-linux-glibc211-x86_64

Short description of error

The Undo operation sometimes affects more than one previous operation. This can wreak havoc on the properties adjustment panel of an addon.

Exact steps for others to reproduce the error

Start with the default cube.
Make a linked duplicate (alt-D) and drag it off to the side.
Add an array modifier to the original.
In the mesh panel, use the - [x] button to make a single-user copy of the mesh.
In the modifier panel [Apply] the modifier.
Undo.

Notice that the array modifier has been restored. (this is correct). Unfortunately, the mesh is no longer single-user (it undid an extra operation which is incorrect).

**System Information** Linux bubastis 3.10.25-gentoo #10 SMP Thu Jan 30 22:17:35 UTC 2014 x86_64 Intel(R) Core(TM) i7-4800MQ CPU @ 2.70GHz GenuineIntel GNU/Linux 01:00.0 VGA compatible controller: NVIDIA Corporation GK107GLM [Quadro K1100M] (rev a1) (prog-if 00 [VGA controller]) **Blender Version** Broken: blender-2.72a-linux-glibc211-x86_64 **Short description of error** The Undo operation sometimes affects more than one previous operation. This can wreak havoc on the properties adjustment panel of an addon. **Exact steps for others to reproduce the error** Start with the default cube. Make a linked duplicate (alt-D) and drag it off to the side. Add an array modifier to the original. In the mesh panel, use the - [x] button to make a single-user copy of the mesh. In the modifier panel [Apply] the modifier. Undo. Notice that the array modifier has been restored. (this is correct). Unfortunately, the mesh is no longer single-user (it undid an extra operation which is incorrect).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mutantbob

Added subscriber: @mutantbob

Added subscribers: @ideasman42, @Sergey, @mont29

Added subscribers: @ideasman42, @Sergey, @mont29

Actually, looks like 'make single user' is not at all registered as an history step (it does not appear in history menu, ctrl-alt-Z).

Campbell, Sergey, do you know whether this is expected behavior, known TODO, or mere forgotten piece of code (or actual bug)?

Actually, looks like 'make single user' is not at all registered as an history step (it does not appear in history menu, ctrl-alt-Z). Campbell, Sergey, do you know whether this is expected behavior, known TODO, or mere forgotten piece of code (or actual bug)?
Bastien Montagne changed title from Undo improperly affects two separate operations to 'Make single user' not registered in history 2014-10-18 20:54:41 +02:00
Author

There's a similar behavior in some add-ons. Consider blender/blender-addons#41775 (the later comments touch on it). It would be nice if we could fix the undo problem for it too.

There's a similar behavior in some add-ons. Consider blender/blender-addons#41775 (the later comments touch on it). It would be nice if we could fix the undo problem for it too.

This issue was referenced by 4a0ff5cb2d

This issue was referenced by 4a0ff5cb2d989ad09608cdcfd964b02782b4951d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4a0ff5cb2d.

Closed by commit 4a0ff5cb2d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42289
No description provided.