Fix T42289: 'Make single user' not registered in history